--- a/WebApp-ScaneApp/src/app/components/client/client.component.html
+++ b/WebApp-ScaneApp/src/app/components/client/client.component.html
@@ -8,18 +8,26 @@
     <table mat-table [dataSource]="lstClients" class="mat-elevation-z4">
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef> # </th>
-            <th mat-cell *matCellDef="let client"> {{ client.id }} </th>
+            <td mat-cell *matCellDef="let client"> {{ client.id }} </td>
         </ng-container>
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Name </th>
-            <th mat-cell *matCellDef="let client"> {{ client.name }} </th>
+            <td mat-cell *matCellDef="let client"> {{ client.name }} </td>
         </ng-container>
         <ng-container matColumnDef="phone">
             <th mat-header-cell *matHeaderCellDef> Phone </th>
-            <th mat-cell *matCellDef="let client"> {{ client.phone }} </th>
+            <td mat-cell *matCellDef="let client"> {{ client.phone }} </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <td mat-cell *matCellDef="let client">
+                <button mat-raised-button color="basic" (click)="OpenEdit(client)"> Edit </button>
+                |
+                <button mat-raised-button color="warn" (click)="Delete(client)"> Delete </button>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="clientColumns">  </tr>
-        <tr mat-row *matRowDef="let row; columns:clientColumns">  <tr>
+        <tr mat-row *matRowDef="let row; columns:clientColumns">  </tr>
     </table>
 </div>
