angular auth, interceptor

--- a/WebApp-ScaneApp/src/app/components/client/client.component.html
+++ b/WebApp-ScaneApp/src/app/components/client/client.component.html
@@ -2,7 +2,9 @@
     <button mat-raised-button color="primary" (click)="OpenDialog()"> Add New Client </button>
 </div>
 
-
+<div class="container" style="max-width:300px; margin-right:0;">
+    <button class="float-left" mat-raised-button color="primary" (click)="OpenDialog()"> Log Out </button>
+</div>
 
 <div style="margin-top: 40px;">
     <table mat-table [dataSource]="lstClients" class="mat-elevation-z4">
