sale controller, service

--- a/WebApp-ScaneApp/src/app/components/client/client.component.html
+++ b/WebApp-ScaneApp/src/app/components/client/client.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="container" style="max-width:300px; margin-right:0;">
-    <button class="float-left" mat-raised-button color="primary" (click)="OpenDialog()"> Log Out </button>
+    <button class="float-left" mat-raised-button color="primary" (click)="Logout()"> Log Out </button>
 </div>
 
 <div style="margin-top: 40px;">
